# Last-Prepration-fang

./: .env.example  .gitignore  AGI_GENERAL_PURPOSE_ROADMAP.md  ANC_COMPLETE_CURRENT_SYSTEM_OVERVIEW.md  README.md  SECURITY.md
.github/: pvt_branch_policy.yml
15May-2026/: dsa_prep_sheet.html  github.md  readme.md
15May-2026/Day1/: FindDuplicates.java  findDuplicates.js  find_duplicates.php  find_duplicates.py  find_duplicates.rb
15May-2026/Day3_All_Star/: 01_right_triangle.js  02_inverted_right_triangle.js  03_pyramid.js  04_inverted_pyramid.js  05_diamond.js  06_hollow_rectangle.js  07_butterfly.js  08_hollow_triangle.js  09_number_triangle.js  10_floyd_triangle.js  11_pascal_triangle.js  12_zigzag.js  13_cross_plus.js  14_hourglass.js  15_right_aligned_triangle.js  16_alphabet_triangle.js  17_alphabet_pyramid.js  18_number_pyramid.js  19_sandglass_numbers.js  20_spiral_border.js  21_left_pascal.js  22_right_pascal.js  23_checkerboard.js  24_x_pattern.js  25_arrow_up.js  26_wave_column.js  27_border_numbers.js  28_mirrored_right_triangle.js  29_number_border.js  30_star_rectangle.js  31_diagonal_star.js  32_reverse_number_triangle.js  (+23 more)
Searches/: AGI_ENHANCEMENTS.md  ARCHITECTURE.md  CURRENT_REALITY.md  DETAILED_ARCHITECTURE.md  DOCUMENTATION_INDEX.md  FUTURE_PURE_NEURAL_BRAIN_MODEL.md  MECHANICS_AND_WORKINGS.md  MY_ASSESSMENT.md  PRO_LEVEL_UPGRADE_PATH.md  README.md  architecture.mmd  deploy_example.md
Searches/ANG_MVC/storage/rust_ringbuf/: Cargo.toml  Dockerfile
Searches/ANG_MVC/storage/rust_ringbuf/src/: main.rs
anc_lang/: test_anc_language.py
(+316 files in other folders)
